# alignak-backend-client

./: .bintray-deb.json  .bintray-freebsd.json  .bintray-rpm.json  .bintray.json  .gitignore  .pylintrc  .travis.yml  AUTHORS  AUTHORS.txt  ChangeLog  MANIFEST.in  README.md  README.rst  code_test.sh  package.sh  requirements.txt  setup.cfg  setup.py
alignak_backend_client/: __init__.py  backend_client.py  client.py
alignak_backend_client/examples/: __init__.py  alignak-object-dump-host-cogny.json  alignak-object-dump-service-passive-01_nsca_cpu.json  alignak-object-list-commands.json  alignak-object-list-grafanas.json  alignak-object-list-graphites.json  alignak-object-list-hosts.json  alignak-object-list-logcheckresults.json  alignak-object-list-realms.json  alignak-object-list-services.json  alignak-object-list-statsds.json  check_result_host_down.json  check_result_host_down_ack.json  check_result_service_critical.json  check_result_service_critical_ack.json  check_result_service_ok.json  check_result_service_warning.json  check_result_service_warning_ack.json  checks-pack-alignak-model-list-hosts.json  checks-pack-alignak-model-list-services.json  checks-pack-alignak-object-list-commands.json  checks-pack-alignak-object-list-hosts.json  checks-pack-alignak-object-list-services.json  checks-pack-alignak-object-list-users.json  checks-pack-hosts-templates.json  example_grafana.json  example_graphite.json  example_graphite_statsd.json  example_logcheckresult_host.json  example_logcheckresult_service.json  example_ls_grafana_false.json  example_statsd.json
alignakbackend_api_client/: __init__.py  client.py
doc/: Makefile
doc/source/: conf.py  index.rst
docs/: make.bat
docs/source/: alignak_backend_client.rst  cli.rst  conf.py  index.rst
docs/source/code/: alignak_backend_client.rst
test/: .coverage  .coveragerc  alignak-backend-cli-tests.py  alignakbackend.py  requirements.txt  setup_test.sh  test_alignak-backend-cli.py  test_backend.py  test_backend_empty.py  test_backend_get.py  test_backend_patch.py  test_delete.py  test_frontend.py  test_get.py  test_login.py  test_multiprocess.py  test_patch.py  test_post.py  test_put.py
test/cfg/test_default/contactgroups/: users.cfg
test/cfg/test_default/contacts/: fred.cfg  guest.cfg
test/json/: example_host_livestate.json  example_service_livestate.json
test/json/nrpe/: commands.json  hosts-templates.json  services-templates.json
