[metadata]
name = alignak_backend_client
version = 0.1.1
author = Frédéric Mohier
author-email = frederic.mohier@gmail.com
summary = Client API for Alignak Backend
description = Client API for Alignak Backend
long_description = This package contains a Python class to be used as a client to communicate with the Alignak REST backend
#description-file = README.md
#license = GNU General Public License v3 (GPLv3)
#url = https://github.com/Alignak-monitoring-contrib/alignak-backend-client
#download_url = 'https://github.com/Alignak-monitoring-contrib/alignak-backend-client/tarball/0.1'
classifier =
   Development Status :: 4 - Beta
   Environment :: Console
   Intended Audience :: System Administrators
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Natural Language :: English
   Programming Language :: Python :: 2.7
   Topic :: System :: Monitoring
   Topic :: System :: Systems Administration

[files]
packages =
    alignak_backend_client

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1
