[metadata]
classifiers =
   Development Status :: 4 - Beta
   Environment :: Console
   Intended Audience :: System Administrators
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Natural Language :: English
   Programming Language :: Python :: 2.7
   Topic :: System :: Monitoring
   Topic :: System :: Systems Administration

[files]
packages =
    alignak_backend_client

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1
